styling the Building Tree on the left and use Datatable plugin for Tables

--- a/BuildingFacilityManager/Areas/Admin/Views/Asset/Assets_Table_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Asset/Assets_Table_Partial.cshtml
@@ -8,6 +8,7 @@
 <table class="table table-hover table-striped" id="assetsTable">
     <thead>
         <tr>
+            <th>Id</th>
             <th>Label</th>
             <th>Space Location</th>
             <th>Status</th>
@@ -27,6 +28,9 @@
 
             <tr id="id-@asset.Id">
 
+                <td>
+                    @asset.Id
+                </td>
                 <td>
                     @asset.Label
                 </td>
