--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Index.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Index.cshtml
@@ -17,3 +17,12 @@
 
 
 
+
+@section scripts
+{
+    <script>
+        $(document).ready(function() {
+            $("#spaces").DataTable();
+        });
+    </script>
+}
