--- a/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Web.UI.WebControls
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,6 +7,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
 
 </head>
 <body>
@@ -29,11 +32,11 @@
             </div>
         </div>
     </div>
-<div class="container body-content">
-    @Html.Partial("_Sidebar_BuildingTree_Partial")
-    @RenderBody()
-    
-</div>
+    <div class="container body-content">
+        @Html.Partial("_Sidebar_BuildingTree_Partial")
+        @RenderBody()
+
+    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
