--- a/BuildingFacilityManager/Areas/Admin/Views/Shared/_Sidebar_BuildingTree_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Shared/_Sidebar_BuildingTree_Partial.cshtml
@@ -2,26 +2,26 @@
 @using BuildingFacilityManager.ViewModels
 @{
     var building = (BuildingTreeViewModel)ViewBag.BuildingTreeViewModel;
+
 }
 <div class="sidenav">
+    <h4 class="btn btn-default" id="buildingTree">ITI Smart Village</h4>
     <ul id="nav">
-        <li>
-            <a href="#">Building Tree</a>
-            <ul class="nested-nav-ul">
-                @foreach (var storey in building.Stories)
-                {
-                    <li>
-                        <a href="#"> [ @storey.Label Storey ] </a>
-                        <ul class="nested-nav-ul">
-                            @foreach (var space in @storey.Spaces)
-                            {
-                                <li>@Html.ActionLink(space.Label, "SpaceAssets", "Asset", new { id = space.Id }, null)</li>
-                            }
-                        </ul>
-                    </li>
-                }
+         
+        @foreach (var storey in building.Stories)
+        {
+            <li>
+                <a style="color: #ce8d16;" href="#"><i class="fas fa-warehouse"></i> @storey.Label Storey</a>
+                <ul class="nested-nav-ul">
+                    @foreach (var space in @storey.Spaces)
+                    {
+                        <li>@Html.ActionLink(" " + space.Label, "SpaceAssets", "Asset", new { id = space.Id }, new {@class = "fas fa-building" })</li>
+                    }
+                </ul>
+            </li>
+        }
 
-            </ul>
-        </li>
+
+
     </ul>
 </div>
