--- a/BuildingFacilityManager/Areas/Admin/Views/Asset/Assets_WorkOrders_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Asset/Assets_WorkOrders_Partial.cshtml
@@ -17,6 +17,7 @@
             <th>Asset</th>
             <th>Location</th>
             <th>Storey</th>
+            <th>Date</th>
         </tr>
     </thead>
     <tbody>
@@ -42,6 +43,9 @@
                 </td>
                 <td>
                     @work.Asset.Space.Storey.Label
+                </td>
+                <td>
+                    @work.Date
                 </td>
             </tr>
         }
