--- a/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    @RenderSection("styles", required: false)
 
 
 </head>
