--- a/BuildingFacilityManager/Areas/Admin/Views/WorkOrder/WorkOrder_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/WorkOrder/WorkOrder_Partial.cshtml
@@ -14,6 +14,7 @@
             <th>Asset</th>
             <th>Location</th>
             <th>Storey</th>
+            <th>Date</th>
         </tr>
     </thead>
     <tbody>
@@ -39,6 +40,9 @@
                 </td>
                 <td>
                     @work.Asset.Space.Storey.Label
+                </td>
+                <td>
+                    @work.Date
                 </td>
             </tr>
         }
