Implementing Admin Authorization

--- a/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li>@Html.ActionLink("Building", "Index", "Building")</li>
                     <li>@Html.ActionLink("Assets", "Index", "Asset")</li>
                     <li>@Html.ActionLink("Work Orders", "Index", "WorkOrder")</li>
+                    <li>@Html.ActionLink("Groups", "Index", "Group")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
