Implementing custom Login Page with redirection to the corresponding Area after succesfful login

--- a/BuildingFacilityManager/Areas/Admin/Views/Asset/Add_WorKOrder_Asset_Details_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Asset/Add_WorKOrder_Asset_Details_Partial.cshtml
@@ -34,7 +34,7 @@
 
                         <div>
                             @Html.LabelFor(e => e.WorkOrder.Description)
-                            @Html.TextBoxFor(e => e.WorkOrder.Description, new { @class = "form-control" })
+                            @Html.TextAreaFor(e => e.WorkOrder.Description, new { @class = "form-control", style = "width: 100%; max-width: 100%;" })
                             @Html.ValidationMessageFor(e => e.WorkOrder.Description)
 
                         </div>
