--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Building_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Building_Partial.cshtml
@@ -2,7 +2,9 @@
 
 <h3>Building</h3>
 
+<div class="thumbnail">
 
+<div class="caption">
 <table class="table table-hover table-striped">
     <thead>
         <tr>
@@ -26,4 +28,4 @@
             </tr>
         }
     </tbody>
-</table>
+</table></div></div>
