--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Spaces_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Spaces_Partial.cshtml
@@ -8,7 +8,9 @@
 </button>
 <h3>Spaces</h3>
 
+<div class="thumbnail">
 
+<div class="caption">
 <table class="table table-hover table-striped" id="spaces">
     <thead>
         <tr>
@@ -47,6 +49,6 @@
         </div>
 
     </tbody>
-</table>
+</table></div></div>
 
 
