--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Stories_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Stories_Partial.cshtml
@@ -6,7 +6,9 @@
         Add
     </button>
     <h3>Stories</h3>
+<div class="thumbnail">
 
+<div class="caption">
 
     <table class="table table-hover table-striped">
         <thead>
@@ -33,6 +35,6 @@
         </div>
 
         </tbody>
-    </table>
+    </table></div></div>
 
 
