--- a/BuildingFacilityManager/Areas/Admin/Views/Asset/AddWorkOrderFromSpaceAssetsForm.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Asset/AddWorkOrderFromSpaceAssetsForm.cshtml
@@ -35,7 +35,7 @@
 
     <div class="form-group">
         @Html.LabelFor(e => e.WorkOrder.Description)
-        @Html.TextAreaFor(e => e.WorkOrder.Description, new { @class = "form-control" })
+        @Html.TextAreaFor(e => e.WorkOrder.Description, new { @class = "form-control", style = "width: 100%; max-width: 100%;"  })
         @Html.ValidationMessageFor(e => e.WorkOrder.Description)
 
     </div>
