Implementing the Dashboard

--- a/BuildingFacilityManager/Areas/Admin/Views/Asset/AssetsDetails.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Asset/AssetsDetails.cshtml
@@ -79,7 +79,7 @@
             Add
         </button>
 
-        <table class="table table-hover table-striped" id="workOrderTable">
+        <table class="table table-hover table-bordered" id="workOrderTable">
             <thead>
                 <tr>
                     <th>Id</th>
