--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Spaces_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Spaces_Partial.cshtml
@@ -11,7 +11,7 @@
 <div class="thumbnail">
 
 <div class="caption">
-<table class="table table-hover table-striped" id="spaces">
+<table class="table table-hover table-bordered" id="spaces">
     <thead>
         <tr>
             <th>Id</th>
