--- a/BuildingFacilityManager/Areas/Admin/Views/Group/Index.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Group/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@model BuildingFacilityManager.ViewModels.GroupsViewModel
+@{
+    ViewBag.Title = "Groups";
+
+}
 <br />
 
 @Html.ActionLink("Add", "AddUser", "Account", new { area = "" }, new { @class = "btn btn-success", Style = "float:right;" })
