--- a/BuildingFacilityManager/Areas/Admin/Views/WorkOrder/WorkOrder_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/WorkOrder/WorkOrder_Partial.cshtml
@@ -5,6 +5,9 @@
     Add
 </button>
 
+<div class="thumbnail">
+
+<div class="caption">
 <table class="table table-hover table-striped" id="workOrderTable">
     <thead>
         <tr>
@@ -47,4 +50,4 @@
             </tr>
         }
     </tbody>
-</table>
+</table></div></div>
