--- a/BuildingFacilityManager/Areas/Admin/Views/Asset/Assets_Table_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Asset/Assets_Table_Partial.cshtml
@@ -5,79 +5,82 @@
     Add
 </button>
 
-<table class="table table-hover table-striped" id="assetsTable">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Label</th>
-            <th>Space Location</th>
-            <th>Status</th>
-            <th>Type</th>
-            <th>InstallationDate</th>
-            <th>ManufacturedDate</th>
-            <th>Price</th>
-            <th>Vendor</th>
-            <th>Warranty</th>
-            <th>Work Orders</th>
-            @*<th>Related Asset</th>*@
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var asset in Model.Assets)
-        {
+<div class="thumbnail">
 
-            <tr id="id-@asset.Id">
+    <div class="caption">
+        <table class="table table-hover table-bordered" id="assetsTable">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Label</th>
+                    <th>Space Location</th>
+                    <th>Status</th>
+                    <th>Type</th>
+                    <th>InstallationDate</th>
+                    <th>ManufacturedDate</th>
+                    <th>Price</th>
+                    <th>Vendor</th>
+                    <th>Warranty</th>
+                    <th>Work Orders</th>
+                    @*<th>Related Asset</th>*@
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var asset in Model.Assets)
+                {
 
-                <td>
-                    @asset.Id
-                </td>
-                <td>
-                    @asset.Label
-                </td>
-                <td>
-                    @asset.Space.Label
-                </td>
-                <td>
-                    @asset.AssetStatus
-                </td>
-                <td>
-                    @asset.AssetType
-                </td>
-                <td>
-                    @asset.InstallationDate
-                </td>
-                <td>
-                    @asset.ManufacturedDate
-                </td>
-                <td>
-                    @asset.Price
-                </td>
-                <td>
-                    @asset.Vendor
-                </td>
-                <td>
-                    @asset.Warranty
-                </td>
+                    <tr id="id-@asset.Id">
 
-                <td>
-                    @Ajax.ActionLink("Work Orders", "AssetsWorkOrders", new { id = asset.Id }, new AjaxOptions { HttpMethod = "GET" })
-                </td>
+                        <td>
+                            @asset.Id
+                        </td>
+                        <td>
+                            @asset.Label
+                        </td>
+                        <td>
+                            @asset.Space.Label
+                        </td>
+                        <td>
+                            @asset.AssetStatus
+                        </td>
+                        <td>
+                            @asset.AssetType
+                        </td>
+                        <td>
+                            @asset.InstallationDate
+                        </td>
+                        <td>
+                            @asset.ManufacturedDate
+                        </td>
+                        <td>
+                            @asset.Price
+                        </td>
+                        <td>
+                            @asset.Vendor
+                        </td>
+                        <td>
+                            @asset.Warranty
+                        </td>
+
+                        <td>
+                            @Ajax.ActionLink("Work Orders", "AssetsWorkOrders", new { id = asset.Id }, new AjaxOptions { HttpMethod = "GET" })
+                        </td>
 
 
-                @*<td>
-                        <button type="button" class="btn btn-default" style="float: right" data-toggle="modal" data-target="#myModal-AssetWorkOrders">
-                            Work Orders
-                        </button>
-                    </td>*@
-                @*<td>
-                        @foreach (var related in @asset.RelatedAssets)
-                        {
-                            @related.Label
-                        }
+                        @*<td>
+                                <button type="button" class="btn btn-default" style="float: right" data-toggle="modal" data-target="#myModal-AssetWorkOrders">
+                                    Work Orders
+                                </button>
+                            </td>*@
+                        @*<td>
+                                @foreach (var related in @asset.RelatedAssets)
+                                {
+                                    @related.Label
+                                }
 
-                    </td>*@
-            </tr>
-        }
-    </tbody>
-</table>
+                            </td>*@
+                    </tr>
+                }
+            </tbody>
+        </table></div></div>
 
