--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Building_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Building_Partial.cshtml
@@ -5,7 +5,7 @@
 <div class="thumbnail">
 
 <div class="caption">
-<table class="table table-hover table-striped">
+<table class="table table-hover table-bordered">
     <thead>
         <tr>
             <th>Label</th>
