--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Stories_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Stories_Partial.cshtml
@@ -10,7 +10,7 @@
 
 <div class="caption">
 
-    <table class="table table-hover table-striped">
+    <table class="table table-hover table-bordered">
         <thead>
         <tr>
             <th>Label</th>
