Added the functionality to assign the Order to a Fixer and Change its Status

--- a/BuildingFacilityManager/Areas/Admin/Views/Asset/Assets_Table_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Asset/Assets_Table_Partial.cshtml
@@ -4,7 +4,9 @@
 <button type="button" class="btn btn-success" style="float: right" data-toggle="modal" data-target="#myModal-AddAsset">
     Add
 </button>
-
+<br/>
+<br/>
+<br/>
 <div class="thumbnail">
 
     <div class="caption">
@@ -53,7 +55,7 @@
                             @asset.ManufacturedDate
                         </td>
                         <td>
-                            @asset.Price
+                            @asset.Price EGP
                         </td>
                         <td>
                             @asset.Vendor
