--- a/BuildingFacilityManager/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -11,12 +11,12 @@
 
 <div class="row">
     <div class="col-sm-4 mb-3">
-        <div class="card text-white bg-danger o-hidden h-100">
+        <div class="card text-white bg-primary o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
                     <i class="fas fa-fw fa-list"></i>
                 </div>
-                <div class="mr-5">(@Model.WorkOrders.Count) new Work Orders!</div>
+                <div class="mr-5">(@Model.WorkOrders.Count) new Work Orders</div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="#workOrderTableToday">
                 <span class="float-left">View Details</span>
@@ -33,7 +33,7 @@
                 <div class="card-body-icon">
                     <i class="fas fa-fw fa-shopping-cart"></i>
                 </div>
-                <div class="mr-5">123 new Purchase Orders!</div>
+                <div class="mr-5">123 new Purchase Orders</div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="#">
                 <span class="float-left">View Details</span>
@@ -45,12 +45,12 @@
     </div>
 
     <div class="col-sm-4 mb-3">
-        <div class="card text-white bg-primary o-hidden h-100">
+        <div class="card text-white bg-danger o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
                     <i class="fas fa-fw fa-life-ring"></i>
                 </div>
-                <div class="mr-5">(@Model.Assets.Count) new Installed Assets!</div>
+                <div class="mr-5">(0) Emergency Work Orders</div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="#assetsWorkOrderToday">
                 <span class="float-left">View Details</span>
