--- a/BuildingFacilityManager/Areas/Admin/Views/WorkOrder/Add_WorkOrder_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/WorkOrder/Add_WorkOrder_Partial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using BuildingFacilityManager.Models.Assets.Enums
 @using BuildingFacilityManager.Models.Building_Models
 @using BuildingFacilityManager.Models.Work_Order.Enums
+@using Microsoft.AspNet.Identity
 @model BuildingFacilityManager.ViewModels.WorkOrderViewModel
 
 
@@ -28,6 +29,7 @@
                     <div class="modal-body">
                         <div>
                             @Html.HiddenFor(s => s.WorkOrder.Id)
+                            @Html.HiddenFor(s => s.WorkOrder.ReporterId, new { Value = @User.Identity.GetUserId() })
                             @Html.HiddenFor(e => e.WorkOrder.Date, new { Value = @DateTime.Now })
 
 
@@ -35,7 +37,7 @@
 
                         <div>
                             @Html.LabelFor(e => e.WorkOrder.Description)
-                            @Html.TextBoxFor(e => e.WorkOrder.Description, new { @class = "form-control", style = "width: 100%; max-width: 100%;" })
+                            @Html.TextAreaFor(e => e.WorkOrder.Description, new { @class = "form-control", style = "width: 100%; max-width: 100%;" })
                             @Html.ValidationMessageFor(e => e.WorkOrder.Description)
 
                         </div>
@@ -93,6 +95,13 @@
 
                         </div>
 
+                        <div>
+                            @Html.LabelFor(e => e.WorkOrder.FixerId)
+                            @Html.DropDownListFor(c => c.WorkOrder.FixerId, new SelectList(@Model.Fixers, "Id", "Fullname"), "Select a Fixer" , new { @class = "form-control" })
+                            @Html.ValidationMessageFor(e => e.WorkOrder.FixerId)
+
+
+                        </div>
                     </div>
 
                 </div>
