--- a/BuildingFacilityManager/Areas/Admin/Views/WorkOrder/WorkOrder_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/WorkOrder/WorkOrder_Partial.cshtml
@@ -5,49 +5,95 @@
     Add
 </button>
 
+<br/>
+<br/>
+<br/>
 <div class="thumbnail">
 
 <div class="caption">
-<table class="table table-hover table-striped" id="workOrderTable">
+<table class="table table-hover table-bordered" id="workOrderTable">
     <thead>
         <tr>
             <th>Id</th>
             <th>Description</th>
+            <th>Type</th>
             <th>Status</th>
             <th>Asset</th>
             <th>Location</th>
             <th>Storey</th>
             <th>Date</th>
+            <th>Reporter</th>
+            <th>Fixer</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var work in Model.WorkOrders)
         {
 
-            <tr id="id-@work.Id">
+        <tr id="id-@work.Id">
+
+            <td>
+                @work.Id
+            </td>
+            <td>
+                @work.Description
+            </td>
+            <td>
+                @work.WorkOrderType
+            </td>
+            <td>
+                @work.WorkOrderStatus
+               
+            </td>
+            <td>
+                @work.Asset.Label
+            </td>
+            <td>
+                @work.Asset.Space.Label
+            </td>
+            <td>
+                @work.Asset.Space.Storey.Label
+            </td>
+            <td>
+                @work.Date
+            </td>
+            <td>
+                @{
+
+                    string space = " ";
+                    if (@work.Reporter != null)
+                    {
+                      @work.Reporter.FirstName @space @work.Reporter.LastName
+                    }
+                }
                 
-                <td>
-                    @work.Id
-                </td>
-                <td>
-                    @work.Description
-                </td>
-                <td>
-                    @work.WorkOrderStatus
-                </td>
-                <td>
-                    @work.Asset.Label
-                </td>
-                <td>
-                    @work.Asset.Space.Label
-                </td>
-                <td>
-                    @work.Asset.Space.Storey.Label
-                </td>
-                <td>
-                    @work.Date
-                </td>
-            </tr>
+
+            </td>
+            <td>
+                @{
+                    if (@work.Fixer != null)
+                    {
+                        @work.Fixer.FirstName @space @work.Fixer.LastName
+
+                    }
+                }
+            </td>
+            <td>
+                <button type="button" title="Assign to a Fixer" style="background-color: skyblue; background-repeat: no-repeat; border: none;cursor: pointer; overflow: hidden; outline: none;" data-toggle="modal" data-target="#Assign-Fixer" onclick="WorkIdForAssignFixer(@work.Id)">
+                    <span class="fas fa-user-tag" aria-hidden="true"></span>
+                </button>
+                <button type="button" title="Change Status" style="background-color: #dda0dd; background-repeat: no-repeat; border: none;cursor: pointer; overflow: hidden; outline: none;" data-toggle="modal" data-target="#Change-Status" onclick="WorkIdForStatusChange(@work.Id)">
+                    <span class="far fa-edit" aria-hidden="true"></span>
+                </button>
+                <br/>
+                <br/>
+                <button type="button" title="Purchase Request" style="background-color: #66cdaa; background-repeat: no-repeat; border: none;cursor: pointer; overflow: hidden; outline: none;" data-toggle="modal" data-target="#">
+                    <span class="fas fa-shopping-cart" aria-hidden="true"></span>
+                </button>
+
+            </td>
+        </tr>
         }
     </tbody>
 </table></div></div>
