Add Tasks Table and Integrate the UI for it with the functionality to add new Tasks for the Inspectors

--- a/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -27,8 +27,10 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Building", "Index", "Building")</li>
                     <li>@Html.ActionLink("Assets", "Index", "Asset")</li>
-                    <li>@Html.ActionLink("Work Orders", "Index", "WorkOrder")</li>
                     <li>@Html.ActionLink("Groups", "Index", "Group")</li>
+                    <li>@Html.ActionLink("Tasks", "Index", "Task")</li>
+                    <li>@Html.ActionLink("Work Orders", "Index", "WorkOrder")</li>
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
