--- a/BuildingFacilityManager/Areas/Admin/Views/Task/TodaysTasks_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Task/TodaysTasks_Partial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BuildingFacilityManager.ViewModels.TaskViewModel
 
-<h3>Today's Tasks</h3>
+<h3>Today's Inspection Tasks</h3>
 
 <div class="thumbnail">
 
