--- a/BuildingFacilityManager/Views/Shared/_Layout.cshtml
+++ b/BuildingFacilityManager/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using BuildingFacilityManager.Models
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -18,9 +19,30 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Facility Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+               
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    @{
+                        string area = "";
+                        if (User.IsInRole(SystemRoles.Admin))
+                        {
+                            area = "Admin";
+                        }
+                        else if (User.IsInRole(SystemRoles.Inspector))
+                        {
+                            area = "Inspector";
+
+                        }
+                        else
+                        {
+                            area = "Org";
+
+                        }
+
+
+                    }
+                    <li>  @Html.ActionLink("DashBoard", "Index", "Dashboard", new { area = area }, null)</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
