--- a/BuildingFacilityManager/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -7,67 +7,10 @@
      padding-bottom: 5px;
  }</style>
 
-<h3>Today's new Stats</h3>
-
-<div class="row">
-    <div class="col-sm-4 mb-3">
-        <div class="card text-white bg-primary o-hidden h-100">
-            <div class="card-body">
-                <div class="card-body-icon">
-                    <i class="fas fa-fw fa-list"></i>
-                </div>
-                <div class="mr-5">(@Model.WorkOrders.Count) new Work Orders</div>
-            </div>
-            <a class="card-footer text-white clearfix small z-1" href="#workOrderTableToday">
-                <span class="float-left">View Details</span>
-                <span class="float-right">
-                    <i class="fas fa-angle-right"></i>
-                </span>
-            </a>
-        </div>
-    </div>
-
-    <div class="col-sm-4 mb-3">
-        <div class="card text-white bg-success o-hidden h-100">
-            <div class="card-body">
-                <div class="card-body-icon">
-                    <i class="fas fa-fw fa-shopping-cart"></i>
-                </div>
-                <div class="mr-5">3 new Purchase Orders</div>
-            </div>
-            <a class="card-footer text-white clearfix small z-1" href="#">
-                <span class="float-left">View Details</span>
-                <span class="float-right">
-                    <i class="fas fa-angle-right"></i>
-                </span>
-            </a>
-        </div>
-    </div>
-
-    <div class="col-sm-4 mb-3">
-        <div class="card text-white bg-danger o-hidden h-100">
-            <div class="card-body">
-                <div class="card-body-icon">
-                    <i class="fas fa-fw fa-life-ring"></i>
-                </div>
-                <div class="mr-5">(0) Emergency Work Orders</div>
-            </div>
-            <a class="card-footer text-white clearfix small z-1" href="#assetsWorkOrderToday">
-                <span class="float-left">View Details</span>
-                <span class="float-right">
-                    <i class="fas fa-angle-right"></i>
-                </span>
-            </a>
-        </div>
-    </div>
-</div>
+@Html.Partial("IconCardsTodayStats_Partial")
 
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+@Html.Partial("PieCharts_Partial")
 
 @Html.Partial("newWorkOrdersToday_Partial")
 <br/>
@@ -83,12 +26,32 @@
 @section Scripts {
 
     @Scripts.Render("~/Scripts/jquery.easing.min.js");
-    
+    @Scripts.Render("~/bundles/jquery");
+    @Scripts.Render("~/bundles/charts");
     <script>
-
         $(document).ready(function () {
             $("#workOrderTableToday").DataTable();
             $("#assetsWorkOrderToday").DataTable();
+        });
+
+
+
+
+        // Set new default font family and font color to mimic Bootstrap's default styling
+        Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+        Chart.defaults.global.defaultFontColor = '#292b2c';
+
+        // Pie Chart Example
+        var ctx = document.getElementById("myPieChart");
+        var myPieChart = new Chart(ctx, {
+            type: 'pie',
+            data: {
+                labels: ["In Progress", "Active", "Completed"],
+                datasets: [{
+                    data: [@Model.TodayInProgressWorkOrders.Count,@Model.TodayActiveWorkOrders.Count,  @Model.TodayCompletedWorkOrders.Count],
+                    backgroundColor: ['#007bff', '#dc3545',  '#28a745']
+                }]
+            }
         });
     </script>
 }
